add client rest